--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
                     <div class="carousel-item active ">
                         <img src="./imgs/carousel-1.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption d-none d-md-block " style="z-index: 1;">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>The perfect venue for your
+                                next event</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                                consequat duis enim velit </p>
+                            <button class="btn">Book Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -105,6 +108,20 @@
     <!--/////==== package section area ====/////-->
     <main>
         <section class="package-section py-5">
+            <!-- toasts -->
+            <div class="">
+                <div class="container">
+                    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                        <symbol id="collection" viewBox="0 0 16 16">
+                            <path
+                                d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13z">
+                            </path>
+                        </symbol>
+                    </svg>
+                    <div class="toast-container"></div>
+                </div>
+            </div>
+            <!-- toasts -->
             <h1 class="text-center py-5">Our Package</h1>
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -116,7 +133,7 @@
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to
                                     additional content. This content is a little bit longer.</p>
-                                <ul>
+                                <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                     <li><i class="fas fa-check-circle">Secuirty facility</i></li>
@@ -137,7 +154,7 @@
                                 <p class="card-text">This card has supporting text below as a natural lead-in to
                                     additional
                                     content.</p>
-                                <ul>
+                                <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                     <li><i class="fas fa-check-circle">Secuirty facility</i></li>
@@ -160,7 +177,7 @@
                                     additional content. This card has even longer content than the first to show that
                                     equal
                                     height action.</p>
-                                <ul>
+                                <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                     <li><i class="fas fa-check-circle">Secuirty facility</i></li>
@@ -181,7 +198,7 @@
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to
                                     additional content. This content is a little bit longer.</p>
-                                <ul>
+                                <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                     <li><i class="fas fa-check-circle">Secuirty facility</i></li>
@@ -287,6 +304,55 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+    <script>
+        const show_toast = (toast_header, toast_message, delay) => {
+
+            const check_time = (i) => {
+                return (i < 10) ? "0" + i : i;
+            }
+
+            let today = new Date(),
+                h = check_time(today.getHours()),
+                m = check_time(today.getMinutes()),
+                s = check_time(today.getSeconds());
+
+            let toast_time = h + ':' + m + ':' + s;
+
+            let toast_template_html = `
+    <div aria-atomic="true" aria-live="assertive"
+      class="toaster-show toast position-fixed bottom-0 end-0 m-3"
+      role="alert" id="toast_message-${today}"
+    >
+      <div class="toast-header">
+        <svg class="icon me-1" width="1em" height="1em">
+          <use xlink:href="#collection"></use>
+        </svg>
+        <strong class="me-auto">${toast_header}</strong>
+        <small>${toast_time}</small>
+        <button aria-label="Close" class="btn-close"
+          data-bs-dismiss="toast" type="button"></button>
+      </div>
+      <div class="toast-body">${toast_message}</div>
+    </div>
+  `;
+
+            const toast_wrapper = document.createElement('template');
+            toast_wrapper.innerHTML = toast_template_html.trim();
+            const awesome_toast = toast_wrapper.content.firstChild;
+            document.querySelector('.toast-container').appendChild(awesome_toast);
+
+            new bootstrap.Toast(
+                awesome_toast, {
+                    autohide: false,
+                    /* set false for demonstration */
+                    delay: delay
+                }
+            ).show();
+        }
+
+        // Usage
+        show_toast('Hello', 'Lorem ipsum dolor sit amet', 10000);
     </script>
 </body>
 
