add package part

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <img src="./imgs/carousel-1.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block " style="z-index: 1;">
+                        <div class="carousel-caption d-none d-md-block carousel-info " style="z-index: 1;">
                             <h5>The perfect venue for your
                                 next event</h5>
                             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                                 consequat duis enim velit </p>
-                            <button class="btn">Book Now</button>
+                            <button class="btn btn-primary">Book Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -126,88 +126,84 @@
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col-lg-3">
-                        <div class="card h-100">
+                        <div class="card h-100 border-0 shadow p-2 ">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$299</small>
-                                <h5 class="card-title">Business fair</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title fw-bold pt-3 pb-2">Business fair</h5>
+                                <p class="card-text ">For most businesses event
+                                    like book fair, craft fair.</p>
                                 <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                 </ul>
                             </div>
-                            <div>
-                                <button class="btn btn-primary">Choose plan</button>
+                            <div class="text-center">
+                                <button class="btn btn-info text-white rounded-pill px-5 py-3 mb-3">Choose
+                                    plan</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card h-100">
+                        <div class="card h-100 border-0 shadow p-2 ">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$299</small>
-                                <h5 class="card-title">Business fair</h5>
+                                <h5 class="card-title fw-bold pt-3 pb-2">Business fair</h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to
                                     additional
                                     content.</p>
                                 <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                 </ul>
                             </div>
-                            <div>
-                                <button class="btn btn-primary">Choose plan</button>
+                            <div class="text-center">
+                                <button class="btn btn-info text-white rounded-pill px-5 py-3 mb-3">Choose plan</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card h-100">
+                        <div class="card h-100 border-0 shadow p-2">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$299</small>
-                                <h5 class="card-title">Business fair</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This card has even longer content than the first to show that
-                                    equal
-                                    height action.</p>
+                                <h5 class="card-title fw-bold pt-3 pb-2">Business fair</h5>
+                                <p class="card-text">For most businesses event
+                                    like book fair, craft fair.</p>
                                 <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                 </ul>
                             </div>
-                            <div>
-                                <button class="btn btn-primary">Choose plan</button>
+                            <div class="text-center">
+                                <button class="btn btn-info text-white rounded-pill px-5 py-3 mb-3">Choose plan</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card h-100">
+                        <div class="card h-100 border-0 shadow p-2">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$299</small>
-                                <h5 class="card-title">Business fair</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title fw-bold pt-3 pb-2">Business fair</h5>
+                                <p class="card-text">For most businesses event
+                                    like book fair, craft fair.</p>
                                 <ul class="list-unstyled">
                                     <li><i class="fas fa-check-circle"></i>limited space access</li>
                                     <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
-                                    <li><i class="fas fa-check-circle">Secuirty facility</i></li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
                                 </ul>
                             </div>
-                            <div>
-                                <button class="btn btn-primary">Choose plan</button>
+                            <div class="text-center">
+                                <button class="btn btn-info text-white rounded-pill px-5 py-3 mb-3">Choose plan</button>
                             </div>
                         </div>
                     </div>
