--- a/index.html
+++ b/index.html
@@ -168,22 +168,35 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="card h-100 border-0 shadow p-2">
+                        <div class="card bg-primary h-100 border-0 shadow-lg p-3">
                             <div class="card-body">
-                                <small class="fs-3 fw-bold">$299</small>
-                                <h5 class="card-title fw-bold pt-3 pb-2">Business fair</h5>
-                                <p class="card-text">For most businesses event
+                                <!-- adding badge -->
+                                <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-3">
+                                    30% OFF
+                                    <span class="visually-hidden">unread messages</span>
+                                </span>
+                                <!-- adding badge end -->
+                                <small class="fs-3 fw-bold text-white">$299</small>
+                                <h5 class="card-title fw-bold pt-3 pb-2 text-white">Business fair</h5>
+                                <p class="card-texts ">For most businesses event
                                     like book fair, craft fair.</p>
                                 <ul class="list-unstyled">
-                                    <li><i class="fas fa-check-circle"></i>limited space access</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
-                                    <li><i class="fas fa-check-circle"></i>Secuirty facility</li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>limited space
+                                        access</li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
+                                        facility</li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
+                                        facility</li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
+                                        facility</li>
+                                    <li class="text-white"><i class="fas fa-check-circle text-white"></i>Secuirty
+                                        facility</li>
                                 </ul>
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-info text-white rounded-pill px-5 py-3 mb-3">Choose plan</button>
+                                <button class="btn btn-light text-info rounded-pill px-5 py-3 mb-3 fw-bold ">Choose
+                                    plan</button>
                             </div>
                         </div>
                     </div>
