--- a/index.html
+++ b/index.html
@@ -67,25 +67,29 @@
                     <div class="carousel-item active ">
                         <img src="./imgs/carousel-1.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption d-none d-md-block carousel-info " style="z-index: 1;">
-                            <h5>The perfect venue for your
+                            <h5 class="display-2 fw-bolder">The perfect venue for your<br>
                                 next event</h5>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            <p class="py-3 fs-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint.
+                                Velit officia
                                 consequat duis enim velit </p>
-                            <button class="btn btn-primary">Book Now</button>
+                            <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./imgs/carousel-2.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block " style="z-index: 1;">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                        <div class="carousel-caption d-none d-md-block carousel-info  " style="z-index: 1;">
+                            <h5 class="display-2 fw-bolder">Second slide label</h5>
+                            <p class="py-3 fs-5">Some representative placeholder content for the second slide.</p>
+                            <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./imgs/carousel-3.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block" style="z-index: 1;">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-caption d-none d-md-block carousel-info " style="z-index: 1;">
+                            <h5 class="display-2 fw-bolder">Third slide label</h5>
+                            <p class="py-3 fs-5">Some representative placeholder content for the third slide.</p>
+                            <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
                     </div>
                 </div>
@@ -223,6 +227,68 @@
                 </div>
             </div>
         </section>
+        <!--/////==== Contact section area ====/////-->
+        <!--/////==== Contact section area ====/////-->
+        <!--/////==== Contact section area ====/////-->
+        <section class="vh-80" style="background-color: #e9e9e9;">
+            <h1 class="text-center py-5">Contact Us</h1>
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col col-xl-10 w-100 ">
+                        <div class="card" style="border-radius: 1rem;">
+                            <div class="row g-0">
+                                <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                    <img src="./imgs/contact.jpg" alt="login form" class="img-fluid"
+                                        style="border-radius: 1rem 0 0 1rem;" />
+                                </div>
+                                <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                    <div class="card-body p-4  text-black">
+
+                                        <form>
+
+                                            <div class="d-flex align-items-center mb-3 pb-1">
+                                                <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                                <span class="h1 fw-bold mb-0">Logo</span>
+                                            </div>
+
+                                            <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your
+                                                account</h5>
+
+                                            <div class="form-outline mb-4">
+                                                <input type="email" id="form2Example17"
+                                                    class="form-control form-control-lg" />
+                                                <label class="form-label" for="form2Example17">Email address</label>
+                                            </div>
+
+                                            <div class="form-outline mb-4">
+                                                <input type="password" id="form2Example27"
+                                                    class="form-control form-control-lg" />
+                                                <label class="form-label" for="form2Example27">Password</label>
+                                            </div>
+
+                                            <div class="pt-1 mb-4">
+                                                <button class="btn btn-dark btn-lg btn-block"
+                                                    type="button">Login</button>
+                                            </div>
+
+                                            <a class="small text-muted" href="#!">Forgot password?</a>
+                                            <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a
+                                                    href="#!" style="color: #393f81;">Register here</a></p>
+                                            <a href="#!" class="small text-muted">Terms of use.</a>
+                                            <a href="#!" class="small text-muted">Privacy policy</a>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
         <!--/////==== FAQ section area ====/////-->
         <!--/////==== FAQ section area ====/////-->
         <!--/////==== FAQ section area ====/////-->
