--- a/index.html
+++ b/index.html
@@ -111,22 +111,23 @@
     <!--/////==== package section area ====/////-->
     <!--/////==== package section area ====/////-->
     <main>
-        <section class="package-section py-5">
+        <section class="package-section  py-5  ">
             <!-- toasts -->
-            <div class="">
-                <div class="container">
-                    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                        <symbol id="collection" viewBox="0 0 16 16">
-                            <path
-                                d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13z">
-                            </path>
-                        </symbol>
-                    </svg>
-                    <div class="toast-container"></div>
+            <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+                <div class=" toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <img src="..." class="rounded me-2" alt="...">
+                        <strong class="me-auto">Bootstrap</strong>
+                        <small>11 mins ago</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        Hello, world! This is a toast message.
+                    </div>
                 </div>
             </div>
             <!-- toasts -->
-            <h1 class="text-center py-5">Our Package</h1>
+            <h1 class="text-center py-5 display-3">Our Package</h1>
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col-lg-3">
@@ -230,8 +231,9 @@
         <!--/////==== Contact section area ====/////-->
         <!--/////==== Contact section area ====/////-->
         <!--/////==== Contact section area ====/////-->
-        <section class="vh-80" style="background-color: #e9e9e9;">
-            <h1 class="text-center py-5">Contact Us</h1>
+        <section class="vh-80 my-5 py-5" style="background-color: #e9e9e9;">
+
+            <h1 class="text-center pt-5 display-3">Contact Us</h1>
             <div class="container py-5 h-100">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col col-xl-10 w-100 ">
@@ -248,7 +250,7 @@
 
                                             <div class="d-flex align-items-center mb-3 pb-1">
                                                 <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                                                <span class="h1 fw-bold mb-0">Logo</span>
+                                                <span class="h1 fw-bold mb-0">Always Active.</span>
                                             </div>
 
                                             <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your
@@ -267,7 +269,7 @@
                                             </div>
 
                                             <div class="pt-1 mb-4">
-                                                <button class="btn btn-dark btn-lg btn-block"
+                                                <button class="btn btn-info btn-lg btn-block text-white"
                                                     type="button">Login</button>
                                             </div>
 
@@ -372,62 +374,35 @@
                 </div>
             </div>
         </section>
-
-
-
     </main>
+    <!--/////==== footer section area ====/////-->
+    <!--/////==== footer section area ====/////-->
+    <!--/////==== footer section area ====/////-->
+    <footer class="container-fluid py-4">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-10 mx-auto d-flex align-items-center justify-content-center">
+                <p class="text-white">© 2020 weddingwire. All rights reserved</p>
+            </div>
+            <div class="col-lg-6 col-md-6 col-10 mx-auto">
+                <div class="d-flex flex-column justify-content-start align-items-center">
+                    <h3 class="fs-5 text-white">Get the App</h3>
+                    <a href=""><img class="img-fluid py-2 " src="./imgs/app-store.png" alt=""></a>
+                    <a href=""> <img class="img-fluid " src="./imgs/google-play.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+
     <script>
-        const show_toast = (toast_header, toast_message, delay) => {
-
-            const check_time = (i) => {
-                return (i < 10) ? "0" + i : i;
-            }
-
-            let today = new Date(),
-                h = check_time(today.getHours()),
-                m = check_time(today.getMinutes()),
-                s = check_time(today.getSeconds());
-
-            let toast_time = h + ':' + m + ':' + s;
-
-            let toast_template_html = `
-    <div aria-atomic="true" aria-live="assertive"
-      class="toaster-show toast position-fixed bottom-0 end-0 m-3"
-      role="alert" id="toast_message-${today}"
-    >
-      <div class="toast-header">
-        <svg class="icon me-1" width="1em" height="1em">
-          <use xlink:href="#collection"></use>
-        </svg>
-        <strong class="me-auto">${toast_header}</strong>
-        <small>${toast_time}</small>
-        <button aria-label="Close" class="btn-close"
-          data-bs-dismiss="toast" type="button"></button>
-      </div>
-      <div class="toast-body">${toast_message}</div>
-    </div>
-  `;
-
-            const toast_wrapper = document.createElement('template');
-            toast_wrapper.innerHTML = toast_template_html.trim();
-            const awesome_toast = toast_wrapper.content.firstChild;
-            document.querySelector('.toast-container').appendChild(awesome_toast);
-
-            new bootstrap.Toast(
-                awesome_toast, {
-                    autohide: false,
-                    /* set false for demonstration */
-                    delay: delay
-                }
-            ).show();
+        window.onload = (e) => {
+            let myToast = document.querySelector('.toast');
+            let bsToast = new bootstrap.Toast(myToast);
+            bsToast.show();
         }
-
-        // Usage
-        show_toast('Hello', 'Lorem ipsum dolor sit amet', 10000);
     </script>
 </body>
 
