--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header id="home">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="./imgs/webbing-logo.png" alt="">
@@ -34,16 +34,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item ms-4 ">
-                            <a class="nav-link active fs-5 text-dark" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active fs-5 text-dark" aria-current="page" href="#home">Home</a>
                         </li>
                         <li class="nav-item ms-4">
-                            <a class="nav-link fs-5 text-dark" href="#">About Us</a>
+                            <a class="nav-link fs-5 text-dark" href="#price">Our Prices</a>
                         </li>
                         <li class="nav-item ms-4">
-                            <a class="nav-link fs-5 text-dark" href="#">Contact</a>
+                            <a class="nav-link fs-5 text-dark" href="#registry">Registry</a>
                         </li>
                         <li class="nav-item ms-4">
-                            <a class="nav-link fs-5 text-dark" href="#">Subscribe</a>
+                            <a class="nav-link fs-5 text-dark" href="#about">About Us</a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +53,6 @@
         <!--/////==== Hero section area  ====/////-->
         <!--/////==== Hero section area  ====/////-->
         <section class="hero-section">
-
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -66,34 +65,35 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <img src="./imgs/carousel-1.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block carousel-info " style="z-index: 1;">
-                            <h5 class="display-2 fw-bolder">The perfect venue for your<br>
-                                next event</h5>
-                            <p class="py-3 fs-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-                                sint.
-                                Velit officia
-                                consequat duis enim velit </p>
+                        <div class="carousel-caption  d-md-block carousel-info " style="z-index: 1;">
+                            <h5 class="display-2 fw-bolder">WEDDING DAY! MAKE<br>
+                                IT SPECIAL</h5>
+                            <p class="py-3 fs-5">We are an all-inclusive venue that can handle your every need, from
+                                hotel accomodations, bar <br>and restaurant as well as our on-site wedding.
+                            </p>
                             <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./imgs/carousel-2.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block carousel-info  " style="z-index: 1;">
-                            <h5 class="display-2 fw-bolder">Second slide label</h5>
-                            <p class="py-3 fs-5">Some representative placeholder content for the second slide.</p>
+                        <div class="carousel-caption d-md-block carousel-info  " style="z-index: 1;">
+                            <h5 class="display-2 fw-bolder">Let's find your wedding team</h5>
+                            <p class="py-3 fs-5">Start your Wedding team, then get right back to celebrating your
+                                engagement! <br>Your registry and website, together. It's simple.</p>
                             <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./imgs/carousel-3.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block carousel-info " style="z-index: 1;">
-                            <h5 class="display-2 fw-bolder">Third slide label</h5>
-                            <p class="py-3 fs-5">Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-caption d-md-block carousel-info " style="z-index: 1;">
+                            <h5 class="display-2 fw-bolder">Instant Online Booking</h5>
+                            <p class="py-3 fs-5">Organizing a wedding always starts with a confirmed date! Some
+                                representative <br> placeholder content for the third slide.</p>
                             <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
@@ -111,24 +111,27 @@
     <!--/////==== package section area ====/////-->
     <!--/////==== package section area ====/////-->
     <main>
-        <section class="package-section  py-5  ">
+        <section id="price" class="package-section  py-5 ">
             <!-- toasts -->
-            <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+            <div class="position-fixed bottom-0 end-0 p-3 " style="z-index: 11">
                 <div class=" toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
-                        <img src="..." class="rounded me-2" alt="...">
-                        <strong class="me-auto">Bootstrap</strong>
-                        <small>11 mins ago</small>
+                        <div class="fs-3 text-info">
+                            <i class="fas fa-gifts"></i>
+
+                        </div>
+                        <strong class="me-auto text-info ps-1 fs-5">WEDDINGWIRE</strong>
+                        <small class="text-dark">15 mins ago</small>
                         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                     </div>
-                    <div class="toast-body">
-                        Hello, world! This is a toast message.
+                    <div class="toast-body text-primary">
+                        30% off on next booking
                     </div>
                 </div>
             </div>
             <!-- toasts -->
-            <h1 class="text-center py-5 display-3">Our Package</h1>
-            <div class="container">
+            <h1 class="text-center py-5 display-3">Our Best Package</h1>
+            <div class="container py-3">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col-lg-3">
                         <div class="card h-100 border-0 shadow p-2 ">
@@ -231,9 +234,9 @@
         <!--/////==== Contact section area ====/////-->
         <!--/////==== Contact section area ====/////-->
         <!--/////==== Contact section area ====/////-->
-        <section class="vh-80 my-5 py-5" style="background-color: #e9e9e9;">
+        <section id="registry" class="vh-80 my-5 py-5" style="background-color: #e9e9e9;">
 
-            <h1 class="text-center pt-5 display-3">Contact Us</h1>
+            <h1 class="text-center pt-5 display-3">Connect With Us</h1>
             <div class="container py-5 h-100">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col col-xl-10 w-100 ">
@@ -276,8 +279,7 @@
                                             <a class="small text-muted" href="#!">Forgot password?</a>
                                             <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a
                                                     href="#!" style="color: #393f81;">Register here</a></p>
-                                            <a href="#!" class="small text-muted">Terms of use.</a>
-                                            <a href="#!" class="small text-muted">Privacy policy</a>
+
                                         </form>
 
                                     </div>
@@ -295,7 +297,7 @@
         <!--/////==== FAQ section area ====/////-->
         <!--/////==== FAQ section area ====/////-->
 
-        <section class="faq-section py-5">
+        <section id="about" class="faq-section py-5">
             <h1 class="text-center py-5">Frequently Asked Questions</h1>
             <div class="container">
                 <div class="row">
