--- a/index.html
+++ b/index.html
@@ -68,34 +68,39 @@
                         <div class="carousel-caption d-md-block carousel-info " style="z-index: 1;">
                             <h5 class=" display-2 fw-bolder ">WEDDING DAY! MAKE<br>
                                 IT SPECIAL</h5>
-                            <p class="py-3 fs-5 d-sm-none d-none d-lg-block ">We are an all-inclusive venue that can
-                                handle your every
-                                need,
-                                from
-                                hotel accomodations, bar <br>and restaurant as well as our on-site wedding.
+                            <p class="py-3 fs-5 w-sm-50 ">We are an all-inclusive venue that can handle your every need,
+                                from hotel accomodations, bar <br>and restaurant as well as our on-site wedding planner.
                             </p>
-                            <button class="btn btn-info text-white px-5 py-3  rounded-pill fs-5 ">Book
-                                Now</button>
+                            <button class="btn btn-info  px-5 py-3  rounded-pill fs-5 mb-5"> <a
+                                    class="text-decoration-none text-white " href="https://www.google.com/"
+                                    target="_blank">Book
+                                    Now</a></button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./imgs/carousel-2.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption  d-md-block carousel-info  " style="z-index: 1;">
                             <h5 class="display-2 fw-bolder">Let's find your wedding team</h5>
-                            <p class="py-3 fs-5 d-sm-none d-none d-lg-block">Start your Wedding team, then get right
+                            <p class="py-3 fs-5 w-sm-50 ">Start your Wedding team, then get right
                                 back to celebrating your
                                 engagement! <br>Your registry and website, together. It's simple.</p>
-                            <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
+                            <button class="btn btn-info px-5 py-3 rounded-pill fs-5 mb-5"> <a
+                                    class="text-decoration-none text-white" href="https://www.google.com/"
+                                    target="_blank">Book
+                                    Now</a></button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./imgs/carousel-3.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-md-block carousel-info " style="z-index: 1;">
-                            <h5 class="display-2 fw-bolder">Instant Online Booking</h5>
-                            <p class="py-3 fs-5 d-sm-none d-none d-lg-block">Organizing a wedding always starts with a
+                        <div class="carousel-caption d-md-block carousel-info  " style="z-index: 1;">
+                            <h5 class="display-2 fw-bolder ">Instant Online Booking</h5>
+                            <p class="py-3 fs-5 w-sm-50 ">Organizing a wedding always starts with a
                                 confirmed date! Some
                                 representative <br> placeholder content for the third slide.</p>
-                            <button class="btn btn-info text-white px-5 py-3 rounded-pill fs-5">Book Now</button>
+                            <button class="btn btn-info  px-5 py-3 rounded-pill fs-5 mb-5"> <a
+                                    class="text-decoration-none text-white" href="https://www.google.com/"
+                                    target="_blank">Book
+                                    Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -138,8 +143,8 @@
             <!-- toasts -->
             <h1 class="text-center py-5 display-3">Our Best Package</h1>
             <div class="container py-3">
-                <div class="row row-cols-1 row-cols-md-4 g-4">
-                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
+                <div class="row  g-4">
+                    <div class="col-lg-3 col-md-6 col-10 mx-auto">
                         <div class="card h-100 border-0 shadow p-2 ">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$299</small>
@@ -160,7 +165,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
+                    <div class="col-lg-3 col-md-6 col-10 mx-auto">
                         <div class="card h-100 border-0 shadow p-2 ">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$499</small>
@@ -179,7 +184,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
+                    <div class="col-lg-3 col-md-6 col-10 mx-auto">
                         <div class="card bg-primary h-100 border-0 shadow-lg p-3">
                             <div class="card-body">
                                 <!-- adding badge -->
@@ -210,7 +215,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4 col-10 mx-auto">
+                    <div class="col-lg-3 col-md-6 col-10 mx-auto">
                         <div class="card h-100 border-0 shadow p-2">
                             <div class="card-body">
                                 <small class="fs-3 fw-bold">$1449</small>
@@ -303,25 +308,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                        <div class="accordion mb-sm-4 mb-3" id="accordionPanelsStayOpenExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                                         aria-controls="panelsStayOpen-collapseOne">
-                                        Accordion Item #1
+                                        Founder: AS Ridwan
                                     </button>
                                 </h2>
                                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                                     aria-labelledby="panelsStayOpen-headingOne">
                                     <div class="accordion-body">
-                                        <strong>This is the first item's accordion body.</strong> It is shown by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It's also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        <strong>WeddingWire was founded by Abdus Salam Ridwan after 1 years of
+                                            experience in MERN Development industry </strong> . For a decade Ridwan
+                                        focused
+                                        specifically on the wedding market, dealing with brides, travel agents, wedding
+                                        planners and local authorities. It was this understanding of the obstacles
+                                        facing wedding couples and tour operators who were interested in planning a
+                                        wedding abroad that prompted her to develop WeddingWire as a
+                                        valuable tool for couples, travel agents and wedding planners, but also to
+                                        support hotels and town halls to tap into the overseas wedding market.
                                     </div>
                                 </div>
                             </div>
@@ -330,19 +337,17 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                                         aria-controls="panelsStayOpen-collapseTwo">
-                                        Accordion Item #2
+                                        Legal Advisors: Lellos P. Demetriades Law Office LLC
                                     </button>
                                 </h2>
                                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                                     aria-labelledby="panelsStayOpen-headingTwo">
                                     <div class="accordion-body">
-                                        <strong>This is the second item's accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It's also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        Established in 1955, Lellos P. Demetriades Law Office LLC is one of the leading
+                                        law firms in Cyprus and has extensive experience and expertise in a broad
+                                        spectrum of services, such as Litigation, Commercial and Corporate Law,
+                                        Competition Law, European Law, Human Rights, Intellectual Property Law,
+                                        Information Technology Law, Electronic Communications and Data Protection Law.
                                     </div>
                                 </div>
                             </div>
@@ -351,19 +356,16 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                         aria-controls="panelsStayOpen-collapseThree">
-                                        Accordion Item #3
+                                        Our Partners
                                     </button>
                                 </h2>
                                 <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="panelsStayOpen-headingThree">
                                     <div class="accordion-body">
-                                        <strong>This is the third item's accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It's also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        TUI UK is one of the leading travel companies in the world, with all their
+                                        holidays designed to help you Discover Your Smile. TUI UK has been a strategic
+                                        partner of BookYourWeddingDay.com since day one, and are using the platform for
+                                        booking wedding dates for their customers instantly.
                                     </div>
                                 </div>
                             </div>
@@ -389,8 +391,10 @@
             <div class="col-lg-6 col-md-6 col-10 mx-auto">
                 <div class="d-flex flex-column justify-content-start align-items-center">
                     <h3 class="fs-5 text-white">Get the App</h3>
-                    <a href=""><img class="img-fluid py-2 " src="./imgs/app-store.png" alt=""></a>
-                    <a href=""> <img class="img-fluid " src="./imgs/google-play.png" alt=""></a>
+                    <a href="https://www.apple.com/apple-tv-app/" target="_blank"><img class="img-fluid py-2 "
+                            src="./imgs/app-store.png" alt=""></a>
+                    <a href=" https://play.google.com/store/apps/details?id=com.king.candycrushsaga" target="_blank">
+                        <img class="img-fluid " src="./imgs/google-play.png" alt=""></a>
                 </div>
             </div>
         </div>
