--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
 
 
 
-        <!--/////==== FAQ section area ====/////-->
-        <!--/////==== FAQ section area ====/////-->
-        <!--/////==== FAQ section area ====/////-->
+        <!--/////==== About Us section area ====/////-->
+        <!--/////==== About Us section area ====/////-->
+        <!--/////==== About Us section area ====/////-->
 
-        <section id="about" class="faq-section py-5">
+        <section id="about" class="about-section py-5">
             <h1 class="text-center py-5">Learn About Us</h1>
             <div class="container">
                 <div class="row">
